# sobit_mini_gazebo

./: CMakeLists.txt  LICENSE.txt  README.en.md  README.md  install.sh  package.xml
launch/: display.launch  sobit_mini_gazebo.launch
scripts/: pose.py
sobit_mini_gazebo/: CMakeLists.txt
sobit_mini_gazebo/config/: controllers.yaml
sobit_mini_gazebo/launch/: display.launch
sobit_mini_gazebo/meshes/body/: sobit_mini_small_gear.stl
sobit_mini_gazebo/robots/: sobit_mini.urdf.xacro
sobit_mini_gazebo/rviz/: display.rviz
sobit_mini_gazebo/urdf/base/: base.urdf.xacro
sobit_mini_gazebo/urdf/body/: body.transmission.xacro  body.urdf.xacro
sobit_mini_gazebo/urdf/head/: head.transmission.xacro  head.urdf.xacro
sobit_mini_gazebo/urdf/left_arm/: left_arm.transmission.xacro  left_arm.urdf.xacro
sobit_mini_gazebo/urdf/left_hand/: left_hand.transmission.xacro  left_hand.urdf.xacro
sobit_mini_gazebo/urdf/right_arm/: right_arm.transmission.xacro  right_arm.urdf.xacro
sobit_mini_gazebo/urdf/right_hand/: right_hand.transmission.xacro  right_hand.urdf.xacro
sobit_mini_gazebo/urdf/sensor/: lidar.urdf.xacro  mic.urdf.xacro  realsense_d435.urdf.xacro
