<?xml version="1.0"?>
<?xml-model
  href="http://download.ros.org/schema/package_format3.xsd"
  schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>sobit_mini_gazebo</name>
  <version>0.0.0</version>
  <description>
    This package allows to visualize SOBIT MINI robot in Gazebo.
  </description>
  <maintainer email="sakuyuu2002@gmai.com">Yuusaku Hanajima</maintainer>

  <license>BSD</license>

  <url type="website">https://home.soka.ac.jp/~choi/index.html</url>
  <url type="repository">https://github.com/TeamSOBITS/sobit_common</url>
  <url type="bugtracker">https://github.com/TeamSOBITS/sobit_common/issues</url>
  <author email="choi.7f@gmail.com">Team SOBITS</author>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>sobit_mini</exec_depend>
  <depend>gazebo_ros_pkgs</depend>
  <depend>gazebo_ros_control</depend>
  <depend>gazebo_plugins</depend>
  <depend>gazebo_ros</depend>
  <depend>gazebo_dev</depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>